--- a/.github/workflows/web-build.yml
+++ b/.github/workflows/web-build.yml
@@ -1,1 +1,44 @@
 
+name: Build & Deploy React Web Tier
+
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      # 1️⃣ Download your repo code
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      # 2️⃣ Install Node.js
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
+      # 3️⃣ Install dependencies
+      - name: Install dependencies
+        run: npm install
+
+      # 4️⃣ Build React app
+      - name: Build React app
+        run: npm run build
+
+      # 5️⃣ Configure AWS credentials
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      # 6️⃣ Upload build output to S3
+      - name: Upload build to S3
+        run: |
+          aws s3 sync build/ s3://threetierkar/web-tier/ --delete
