--- a/.github/workflows/web-build.yml
+++ b/.github/workflows/web-build.yml
@@ -1,4 +1,3 @@
-
 name: Build & Deploy React Web Tier
 
 on:
@@ -12,25 +11,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Download your repo code
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2️⃣ Install Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
 
-      # 3️⃣ Install dependencies
       - name: Install dependencies
+        working-directory: web-tier
         run: npm install
 
-      # 4️⃣ Build React app
       - name: Build React app
+        working-directory: web-tier
         run: npm run build
 
-      # 5️⃣ Configure AWS credentials
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -38,7 +34,6 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      # 6️⃣ Upload build output to S3
       - name: Upload build to S3
         run: |
-          aws s3 sync build/ s3://threetierkar/web-tier/ --delete
+          aws s3 sync web-tier/build/ s3://threetierkar/web-build/ --delete
