--- a/.github/workflows/web-build.yml
+++ b/.github/workflows/web-build.yml
@@ -30,9 +30,9 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-access-key-id: AKIAUYVWA6VUAKCXKPLW
+          aws-secret-access-key: 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
+          aws-region: us-east-1
 
       - name: Upload build to S3
         run: |
